Closed
Bug 284276
Opened 21 years ago
Closed 21 years ago
"Save Link (Target) As" doesn't display file size, clicking the link itself displays file size on download (FTP)
Categories
(Core Graveyard :: Networking: FTP, defect, P1)
Core Graveyard
Networking: FTP
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: antitrust2, Assigned: Biesinger)
References
()
Details
Attachments
(1 file)
|
3.98 KB,
patch
|
darin.moz
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.6) Gecko/20050225 Firefox/1.0.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.6) Gecko/20050225 Firefox/1.0.1
https://bugzilla.mozilla.org/show_bug.cgi?id=245829
If "Save Link As" it NOT count filesize, and (of course) NOT display % percentage.
... If LMB click - OK, then it GETS filesize & poperly displays this & of course
& - percentages.
Tested on:
ftp://share.sh.cvut.cz/Akce_SH/OpenWeekend_2004/2004_10_17_OW_14-How_to_install_HURD-Brinkmann.avi
ftp://share.sh.cvut.cz/Akce_SH/OpenWeekend_2001/pantucek-ssl.avi
Reproducible: Always
Steps to Reproduce:
1. open http://www.openweekend.cz/index.php?node=4l&dotaz=3&lang=1
2. RMB & Save Link As
3. SAVE
4. == You have NOT filesize & how much percent have been downloaded.
Actual Results:
See: Detials - above.
Expected Results:
The same, what it do, as you click LMB (Left Mouse Button) - it SHOULD (like in
LMB click) get filesize etc. first & then begin to download.
Look at:
https://bugzilla.mozilla.org/show_bug.cgi?id=245829
I think it should be (almost) the same bug (in SC) but with different "exhibition".
TNX much guys (& girls) for FF&TB & all Mozilla suite!
Comment 1•21 years ago
|
||
*** Bug 284274 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Assignee: bugs → file-handling
Component: Download Manager → File Handling
Product: Firefox → Core
QA Contact: aebrahim-bmo → ian
Summary: If "Save Link As" it NOT count filesize, and (of course) NOT display % percentage. → "Save Link (Target) As" doesn't display file size, clicking the link itself displays file size on download (FTP)
Version: unspecified → Trunk
| Assignee | ||
Comment 2•21 years ago
|
||
*sigh*
// nsITransportEventSink methods
NS_IMETHODIMP
DataRequestForwarder::OnTransportStatus(nsITransport *transport, nsresult status,
PRUint64 progress, PRUint64 progressMax)
{
[...]
PRUint64 max = mUploading ? PRUint64(mBytesToUpload) : progressMax;
mEventSink->OnProgress(this, nsnull, count, max);
And of course, socket transports pass -1 as progressMax...
/netwerk/base/src/nsSocketTransport2.cpp, line 872 --
sink->OnTransportStatus(this, status, progress, LL_MAXUINT);
This broke with this checkin:
http://bonsai.mozilla.org/cvsview2.cgi?diff_mode=context&whitespace_mode=show&root=/cvsroot&subdir=mozilla/netwerk/protocol/ftp/src&command=DIFF_FRAMESET&file=nsFTPChannel.cpp&rev2=1.134&rev1=1.133
1.134 <darin@meer.net> 2004-04-16 17:58
landing patch for bug 24867 "UI for FTP upload" r=biesi,neil sr=bryner
I reviewed it :-/
Assignee: file-handling → cbiesinger
Status: UNCONFIRMED → NEW
Component: File Handling → Networking: FTP
Ever confirmed: true
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Target Milestone: --- → mozilla1.8beta2
| Assignee | ||
Comment 3•21 years ago
|
||
Attachment #177385 -
Flags: review?(darin)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Comment 4•21 years ago
|
||
Comment on attachment 177385 [details] [diff] [review]
patch
we only ever cache FTP directory listings, so i wouldn't worry about the cached
case too much. patch looks good. r=darin
Attachment #177385 -
Flags: review?(darin) → review+
| Assignee | ||
Comment 5•21 years ago
|
||
Comment on attachment 177385 [details] [diff] [review]
patch
might that ever change? if not, I'll remove the comment before checking in,
then.
Attachment #177385 -
Flags: superreview?(bzbarsky)
Comment 6•21 years ago
|
||
Comment on attachment 177385 [details] [diff] [review]
patch
Seems reasonable
Attachment #177385 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Comment 7•21 years ago
|
||
checked in for 1.8b2, without the comment
Checking in netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp;
/cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <--
nsFtpConnectionThread.cpp
new revision: 1.295; previous revision: 1.294
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•2 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•