Bug 284276 make the ftp channel pass the correct progressMax value to the listener's onProgress function r=darin sr=bz